--- a/main.css
+++ b/main.css
@@ -33,6 +33,12 @@ button:focus {
   background: limegreen;
 }
 
+.btn.add-client-btn {
+  font-size: 18px;
+  padding: 30px 20px;
+  background-color: cornflowerblue !important;
+}
+
 .btn:hover {
   text-shadow: 0px 0px 6px rgba(255, 255, 255, 1);
   transition: all 0.4s ease 0s;
@@ -40,6 +46,10 @@ button:focus {
 
 .container {
   padding: 40px 60px;
+}
+
+.p-top-40 {
+  padding-top: 40px;
 }
 
 header {
@@ -88,13 +98,13 @@ header {
   color: aquamarine;
 }
 
-.message{
+.message {
   margin-top: 30px;
 }
 
-/************** Board **************/
+/************** Board Page **************/
 
-.board{
+.board {
   display: flex;
   justify-content: center;
 }
@@ -117,19 +127,38 @@ header {
   }
 }
 
-#clients td, #clients th {
+#clients td,
+#clients th {
   border: 1px solid #ddd;
   padding: 8px;
   text-align: center;
 }
 
-#clients tr:nth-child(even){background-color: #f2f2f2;}
+#clients tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
 
-#clients tr:hover {background-color: #ddd;}
+#clients tr:hover {
+  background-color: #ddd;
+}
 
 #clients th {
   padding-top: 12px;
   padding-bottom: 12px;
+  background-color: cornflowerblue;
+  color: white;
+}
+
+/************** Specialist Page **************/
+.specialists{
+  display: flex;
+  justify-content: center;
+}
+
+select.choose-specialist{
+  padding: 10px 20px;
+  border-radius: 6px;
+  font-size: 16px;
   background-color: cornflowerblue;
   color: white;
 }
