higlighted clients in the board that are currently being serviced

--- a/main.css
+++ b/main.css
@@ -162,3 +162,7 @@ select.choose-specialist{
   background-color: cornflowerblue;
   color: white;
 }
+
+.active-client{
+  background-color: Khaki!important;
+}
