--- a/main.css
+++ b/main.css
@@ -10,99 +10,28 @@ body {
   padding: 0;
 }
 
+header {
+  background-color: cornflowerblue;
+}
+
 button:focus {
   outline: 0;
 }
 
-.btn {
-  color: #fff !important;
-  text-transform: uppercase;
-  text-decoration: none;
-  background: cornflowerblue;
-  padding: 10px 20px;
-  border-radius: 8px;
-  display: inline-block;
-  border: none;
-  transition: all 0.4s ease 0s;
-  cursor: pointer;
+.hidden{
+  display: none;
 }
 
-.btn.load-btn {
-  font-size: 18px;
-  padding: 30px 20px;
-  background: limegreen;
+.relative{
+  position: relative;
 }
 
-.btn.add-client-btn {
-  font-size: 18px;
-  padding: 30px 20px;
-  background-color: cornflowerblue !important;
+.absolute{
+  position: absolute;
 }
 
-.btn:hover {
-  text-shadow: 0px 0px 6px rgba(255, 255, 255, 1);
-  transition: all 0.4s ease 0s;
-}
 
-.container {
-  padding: 40px 60px;
-}
-
-.p-top-40 {
-  padding-top: 40px;
-}
-
-header {
-  /* height: 50px; */
-  background-color: cornflowerblue;
-}
-
-.menu {
-  list-style: none;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-}
-
-@media (min-width: 750px) {
-  .menu {
-    flex-direction: row;
-  }
-}
-
-.menu__item {
-  padding-top: 20px;
-  cursor: pointer;
-}
-.menu__item:last-child {
-  padding-bottom: 20px;
-}
-
-@media (min-width: 750px) {
-  .menu__item {
-    padding: 20px;
-  }
-}
-
-.menu__item a,
-.menu__item a:visited,
-.menu__item a:hover,
-.menu__item a:active {
-  color: #fff;
-  text-decoration: none;
-  text-transform: uppercase;
-}
-.menu__item a:hover,
-.menu__item a:active {
-  color: aquamarine;
-}
-
-.message {
-  margin-top: 30px;
-}
-
-/************** Board Page **************/
+/************** Clients Table **************/
 
 .board {
   display: flex;
@@ -113,6 +42,7 @@ header {
   font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
   border-collapse: collapse;
   width: 100%;
+  margin-top: 40px;
 }
 
 @media (min-width: 750px) {
@@ -123,7 +53,8 @@ header {
 
 @media (min-width: 1200px) {
   #clients {
-    width: 60%;
+    width: 100%;
+    font-size: 20px;
   }
 }
 
@@ -145,24 +76,74 @@ header {
 #clients th {
   padding-top: 12px;
   padding-bottom: 12px;
-  background-color: cornflowerblue;
-  color: white;
-}
-
-/************** Specialist Page **************/
-.specialists{
-  display: flex;
-  justify-content: center;
-}
-
-select.choose-specialist{
-  padding: 10px 20px;
-  border-radius: 6px;
-  font-size: 16px;
-  background-color: cornflowerblue;
   color: white;
 }
 
 .active-client{
   background-color: Khaki!important;
 }
+
+/* ALERTS */
+
+.alert {
+  min-width: 150px;
+  padding: 15px;
+  margin-bottom: 20px;
+  border: 1px solid transparent;
+  border-radius: 3px;
+}
+.alert-success {
+  background-color: #91cf91;
+  border-color: #80c780;
+  color: #3d8b3d;
+}
+.alert-warning {
+  background-color: #ebc063;
+  border-color: #e8b64c;
+  color: #a07415;
+}
+.alert-danger {
+  background-color: #e27c79;
+  border-color: #dd6864;
+  color: #9f2723;
+}
+.alert p {
+  padding: 0;
+  margin: 0;
+}
+.alert i {
+  padding-right: 5px;
+  vertical-align: middle;
+  font-size: 24px;
+}
+.alert .close-alert {
+  -webkit-appearance: none;
+  position: relative;
+  float: right;
+  padding: 0;
+  border: 0;
+  cursor: pointer;
+  color: inherit;
+  background: 0 0;
+  font-size: 21px;
+  line-height: 1;
+  font-weight: bold;
+  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.7);
+  filter: alpha(opacity=40);
+  opacity: .4;
+}
+.alert .close-alert:hover {
+  filter: alpha(opacity=70);
+  opacity: .7;
+}
+.shadow-1, .alert {
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+}
+
+.shadow-2, .alert:hover {
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+}
+
+
+
+
