--- a/src/css/global.css
+++ b/src/css/global.css
@@ -30,32 +30,20 @@ button:focus {
   position: absolute;
 }
 
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
+
 
 /************** Clients Table **************/
-
-.board {
-  display: flex;
-  justify-content: center;
-}
 
 #clients {
   font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
   border-collapse: collapse;
   width: 100%;
   margin-top: 40px;
-}
-
-@media (min-width: 750px) {
-  #clients {
-    width: 80%;
-  }
-}
-
-@media (min-width: 1200px) {
-  #clients {
-    width: 100%;
-    font-size: 20px;
-  }
 }
 
 #clients td,
@@ -83,7 +71,12 @@ button:focus {
   background-color: Khaki!important;
 }
 
-/* ALERTS */
+.board__message{
+  text-align: center;
+}
+
+/************** Alerts **************/
+
 
 .alert {
   min-width: 150px;
