--- a/src/css/global.css
+++ b/src/css/global.css
@@ -36,6 +36,9 @@ input[type=number]::-webkit-outer-spin-button {
   margin: 0; 
 }
 
+input[type=number] {
+  -moz-appearance:textfield;
+}
 
 /************** Clients Table **************/
 
