--- a/src/css/global.css
+++ b/src/css/global.css
@@ -18,26 +18,26 @@ button:focus {
   outline: 0;
 }
 
-.hidden{
+.hidden {
   display: none;
 }
 
-.relative{
+.relative {
   position: relative;
 }
 
-.absolute{
+.absolute {
   position: absolute;
 }
 
-input[type=number]::-webkit-inner-spin-button, 
-input[type=number]::-webkit-outer-spin-button { 
-  -webkit-appearance: none; 
-  margin: 0; 
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
 
-input[type=number] {
-  -moz-appearance:textfield;
+input[type="number"] {
+  -moz-appearance: textfield;
 }
 
 /************** Clients Table **************/
@@ -70,16 +70,15 @@ input[type=number] {
   color: white;
 }
 
-.active-client{
-  background-color: Khaki!important;
+.active-client {
+  background-color: Khaki !important;
 }
 
-.board__message{
+.board__message {
   text-align: center;
 }
 
 /************** Alerts **************/
-
 
 .alert {
   min-width: 150px;
@@ -126,20 +125,18 @@ input[type=number] {
   font-weight: bold;
   text-shadow: 0 1px 0 rgba(255, 255, 255, 0.7);
   filter: alpha(opacity=40);
-  opacity: .4;
+  opacity: 0.4;
 }
 .alert .close-alert:hover {
   filter: alpha(opacity=70);
-  opacity: .7;
+  opacity: 0.7;
 }
-.shadow-1, .alert {
+.shadow-1,
+.alert {
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
-.shadow-2, .alert:hover {
+.shadow-2,
+.alert:hover {
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 }
-
-
-
-
